--- a/css/style.css
+++ b/css/style.css
@@ -793,6 +793,7 @@ header.sticky .navbar{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-right:30px;
 }
 /* FOOTER  */
 footer{
