--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,9 @@ header.sticky .navbar{
 .bar .cprogramming::before{
     width: 70%;
 }
+.bar .cppprogramming::before{
+    width: 90%;
+}
 .bar .python::before{
     width: 40%;
 }
@@ -640,6 +643,7 @@ header.sticky .navbar{
 }
 .portfolio-model-body img{
     width: 100%;
+    height: 280px;
     margin: 20px 0;
     max-height: 320px;
     border-radius: 10px;
@@ -793,7 +797,7 @@ header.sticky .navbar{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-right:30px;
+    /* margin-right: 60px; */
 }
 /* FOOTER  */
 footer{
@@ -907,7 +911,7 @@ footer a{
     }
     .nav-close-btn{
         position: absolute;
-        background: url(../images/cross.png)no-repeat;
+        background: url(/images/cross.png)no-repeat;
         filter: var(--color-filter);
         background-size: 12px;
         background-position: center;
@@ -920,7 +924,7 @@ footer a{
 
     }
     .nav-menu-btn{
-        background: url(../images/burger.png)no-repeat;
+        background: url(/images/burger.png)no-repeat;
         filter: var(--color-filter);
         background-size: 30px;
         background-position: center;
