--- a/css/style.css
+++ b/css/style.css
@@ -911,7 +911,7 @@ footer a{
     }
     .nav-close-btn{
         position: absolute;
-        background: url(/images/cross.png)no-repeat;
+        background: url(images/cross.png)no-repeat;
         filter: var(--color-filter);
         background-size: 12px;
         background-position: center;
@@ -924,7 +924,7 @@ footer a{
 
     }
     .nav-menu-btn{
-        background: url(/images/burger.png)no-repeat;
+        background: url(images/burger.png)no-repeat;
         filter: var(--color-filter);
         background-size: 30px;
         background-position: center;
